<resources>
    <string name="app_name">Data usage</string>
    <string name="appwidget_text">Example</string>
    <string name="add_widget">Add widget</string>
    <string name="reset_time">%1$d/%2$d/%3$d %4$d:%5$d:00</string>
    <string name="widget_mobile_data_usage" translatable="false">%1$s %2$s</string>
    <string name="notification_mobile_data_usage">Mobile data: %1$s</string>
    <string name="notification_wifi_data_usage">Wi-Fi: %1$s</string>
    <string name="home_mobile_data_sent">%1$s\nSent</string>
    <string name="home_mobile_data_received">%1$s\nReceived</string>
    <string name="home_wifi_data_sent">%1$s\nSent</string>
    <string name="home_wifi_data_received">%1$s\nReceived</string>
    <string name="label_current_data_warning_trigger_level_limit_set">Current trigger level: %1$s%% (%2$s)</string>
    <string name="label_current_data_warning_trigger_level_limit_not_set">Current trigger level: %1$s%%</string>
    <string name="label_data_trigger_level">When %1$s%% of the data is used</string>
    <string name="hello_blank_fragment" translatable="false"></string>
    <string name="app_label_package_name">Package name: %1$s</string>
    <string name="app_label_uid">UID: %1$d</string>
    <string name="app_name_placeholder">App name</string>
    <string name="app_data_usage_placeholder">0 MB</string>
    <string name="label_sent">sent</string>
    <string name="label_received">received</string>
    <string name="action_open_app_settings">Open the app settings</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_ok">OK</string>
    <string name="title_app_data_usage_session">Select session</string>
    <string name="label_today">Today</string>
    <string name="label_yesterday">Yesterday</string>
    <string name="label_this_month">This month</string>
    <string name="label_last_month">Last month</string>
    <string name="label_this_year">This year</string>
    <string name="label_all_time">All time</string>
    <string name="title_app_data_usage_type">Select type</string>
    <string name="label_mobile_data">Mobile data</string>
    <string name="label_wifi">Wi-Fi</string>
    <string name="title_data_usage">Data usage</string>
    <string name="action_update">Update</string>
    <string name="data_remaining_placeholder">0.00 GB remaining</string>
    <string name="app_version_placeholder" translatable="false">v1.0</string>
    <string name="label_dev">With ❤ by Bitroid Inc.</string>
    <string name="label_loading_apps">Loading apps</string>
    <string name="label_loading">Loading…</string>
    <string name="label_app_data_usage_session_empty">No data available</string>
    <string name="label_want_to_contribute">Click here to find out how to contribute to Data Monitor.</string>
    <string name="setup_image_footer">Widgets and/or notification provide easy access to the amount of data used</string>
    <string name="heading_data_reset">Reset counter</string>
    <string name="daily">Daily</string>
    <string name="monthly">Monthly</string>
    <string name="heading_data_limit">Data limit</string>
    <string name="data_limit_placeholder" translatable="false">0.00</string>
    <string name="data_type_mb">MB</string>
    <string name="data_type_gb">GB</string>
    <string name="title_data_warning_trigger">Data warning trigger level</string>
    <string name="title_add_data_plan">Add data plan</string>
    <string name="title_refresh_interval">Select refresh interval</string>
    <string name="option_1_min">1 minute</string>
    <string name="option_2_min">2 minutes</string>
    <string name="option_5_min">5 minutes</string>
    <string name="option_10_min">10 minutes</string>
    <string name="option_15_min">15 minutes</string>
    <string name="title_widget_setup">Set up the widget</string>
    <string name="widget_setup_step_1">1. Touch and hold an empty space on your home screen.</string>
    <string name="widget_setup_step_2">2. Tap \"Widgets\".</string>
    <string name="widget_setup_step_3">3. Drag and drop the Data Monitor widget onto your home screen.</string>
    <string name="heading_data_usage_today">Today\'s data usage</string>
    <string name="action_add_data_plan_home">Add your data plan to start monitoring it</string>
    <string name="heading_week_overview">This week\'s overview</string>
    <string name="error_loading_overview">Could not load this week\'s overview.\nTry again later.</string>
    <string name="title_setup">Setup Data monitor</string>
    <string name="setup_widget">Set up the widget</string>
    <string name="setup_notification">Set up notifications</string>
    <string name="title_configure">Configure</string>
    <string name="setup_widget_title">Widget</string>
    <string name="setup_widget_refresh_interval">Widget refresh interval</string>
    <string name="refresh_interval_placeholder">1 minute</string>
    <string name="setup_show_remaining_data">Show info about remaining data</string>
    <string name="setup_refresh_widget">Refresh widget</string>
    <string name="refresh_widget_summary">Refresh the widget if it\'s facing any problem</string>
    <string name="setup_notification_title">Notification</string>
    <string name="setup_notification_refresh_interval">Refresh interval for notifications</string>
    <string name="setup_show_mobile_usage">Show mobile-data usage</string>
    <string name="setup_show_wifi_usage">Show Wi-Fi usage</string>
    <string name="monitor_data">Monitor data usage</string>
    <string name="setup_data_alert">Data usage alert</string>
    <string name="data_alert_summary">Notify when the data limit is reached</string>
    <string name="settings_general">General</string>
    <string name="setup_add_data_plan">Add data plan</string>
    <string name="add_data_plan_summary">Add or update your data plan</string>
    <string name="setup_usage_reset_time">Reset usage time for data</string>
    <string name="usage_reset_time_placeholder" translatable="false">12:00 AM</string>
    <string name="app_license_header">App License</string>
    <string name="oss_licenses">Opensource Licenses</string>
    <string name="itsdrnoob">Dr.NooB</string>
    <string name="contributors">Contributors</string>
    <string name="itsdrnoob_summary"><![CDATA[Lead Developer and Designer]]></string>
    <string name="settings_appearance">Appearance</string>
    <string name="settings_dark_mode">Dark mode</string>
    <string name="dark_mode_summary">Turn on/off dark mode</string>
    <string name="settings_preferences">Preferences</string>
    <string name="settings_language">Language</string>
    <string name="language_summary">Change the app language</string>
    <string name="about">About</string>
    <string name="about_summary"><![CDATA[Source, help and more]]></string>
    <string name="license">License</string>
    <string name="contributors_summary">Those who are always there</string>
    <string name="donate">Donate</string>
    <string name="donate_summary">Buy us a coffee, maybe?</string>
    <string name="data_reset">Data reset</string>
    <string name="data_limit">Data limit</string>
    <string name="support_and_development">Support and development</string>
    <string name="github">GitHub</string>
    <string name="github_summary">View the source code</string>
    <string name="xda">XDA Thread</string>
    <string name="xda_summary"><![CDATA[FAQ, help and troubleshooting]]></string>
    <string name="report">Report bugs</string>
    <string name="report_summary">Report bugs or request features</string>
    <string name="setup">Setup</string>
    <string name="app_data_usage">App usage</string>
    <string name="settings">Settings</string>
    <string name="btc_address_copied">Bitcoin wallet address copied to the clipboard</string>
    <string name="eth_address_copied">Ethereum wallet address copied to the clipboard</string>
    <string name="ltc_address_copied">Litecoin wallet address copied to the clipboard</string>
    <string name="label_system_apps">System Apps</string>
    <string name="package_system" translatable="false">com.android.systemui</string>
    <string name="home">Home</string>
    <string name="usage_access_permission">Usage Access Permission</string>
    <string name="usage_access_body">Required to run the app, since it collects app usage stats.\nNo personal data is collected.</string>
    <string name="action_grant">Grant permission</string>
    <string name="label_tethering">Mobile Hotspot</string>
    <string name="package_tethering" translatable="false">com.android.tethering</string>
    <string name="label_removed">Removed Apps</string>
    <string name="package_removed" translatable="false">com.android.removed</string>
    <string name="oem_skin_warning">%1$s Please check the extra optimisation tips to ensure the app works properly.</string>
    <string name="oem_skin_miui">MIUI detected.</string>
    <string name="battery_optimisation_disabled">Battery optimisation disabled</string>
    <string name="data_plan_saved">Data plan saved</string>
    <string name="upi_app_not_found">Install an app that can do this first</string>
    <string name="upi_unknown_error">Unknown error.\nPlease try again or another method.</string>
    <string name="label_no_additional_lang">Click here to help translate the app.</string>
    <string name="notification_disabled">Data monitor notification disabled</string>
    <string name="label_widget_refresh_interval_change">Widget will be updated every %1$s</string>
    <string name="label_notification_refresh_interval_change">Notification will be updated every %1$s</string>
    <string name="label_data_usage_reset_time_change">Reset data usage every %1$s at %2$s</string>
    <string name="label_data_usage_reset_date_change">Data usage will be reset on %1$d%2$s of every month</string>
    <string name="remaining_data_info_enabled">Remaining data info enabled</string>
    <string name="remaining_data_info_disabled">Remaining data info disabled</string>
    <string name="label_monitoring_no_plan">Add a data plan to start monitoring</string>
    <string name="label_widget_refreshed">Widget refreshed</string>
    <string name="label_notification_enabled">Data monitor notification enabled</string>
    <string name="label_notification_cannot_disable_both">Cannot turn off both elements</string>
    <string name="label_setup_notification_first">Please set up the notification first</string>
    <string name="label_data_plan_saved">Data plan saved</string>
    <string name="month">month</string>
    <string name="day">day</string>
    <string name="label_add_data_plan_first">Please add a data plan first</string>
    <string name="title_data_warning_notification">Data usage warning</string>
    <string name="body_data_warning_notification">You have used %1$d%% of your data limit</string>
    <string name="body_app_data_warning_notification">%1$s has used up its data quota</string>
    <string name="title_data_usage_notification">Data usage today: %1$s</string>
    <string name="body_data_usage_notification_loading">Loading…</string>
    <string name="label_data_remaining">%1$s remaining</string>
    <string name="label_data_remaining_used_excess">%1$s extra used</string>
    <string name="disable_battery_optimisation">Turn off battery optimisation</string>
    <string name="disable_battery_optimisation_body">Prevents killing Data Monitor when running in the background.\nOtherwise values might be incorrect.</string>
    <string name="extra_optimisation_tips">Extra optimisation tips</string>
    <string name="oem_battery_settings">OEM battery settings</string>
    <string name="action_next">Next</string>
    <string name="overview_monday">Mon</string>
    <string name="read_phone_state_permission">Permission to read phone state</string>
    <string name="read_phone_state_body">Devices running Android version 9 and below must grant this permission manually. No personal data will be collected.</string>
</resources>