<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.RequestPhoneStatePermissionFragment">
    <LinearLayout
        android:id="@+id/linearLayout11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/read_phone_state_permission"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
        android:gravity="center"
        android:text="@string/read_phone_state_body"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/btnprimary"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="@dimen/margin_extra_large"
        android:layout_marginEnd="@dimen/margin_extra_large"
        android:layout_marginTop="@dimen/margin_extra_large"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/action_grant"
        android:background="@drawable/curved_backbround"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btn_secondary"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout11" />

    <TextView
        android:id="@+id/btn_secondary"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="@dimen/margin_extra_large"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_extra_large"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/action_cancel"
        android:textAllCaps="false"
        android:background="@drawable/curved_backbround"

        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
        app:layout_constraintBottom_toBottomOf="parent" />
    </LinearLayout>

</FrameLayout>