<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">



        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"

            android:text="@string/disable_battery_optimisation"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/disable_battery_optimisation_body"
           />

        <TextView
            android:id="@+id/oem_skin_warning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_mid_large"
            android:layout_marginEnd="@dimen/margin_small"
            android:clickable="true"
            android:drawablePadding="@dimen/margin_medium"
            android:drawableTint="@color/error"
            android:padding="@dimen/margin_medium"/>
        <TextView
            android:id="@+id/disable_battery_optimisation"
            style="@style/TextAppearance.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_extra_large"
            android:layout_marginStart="@dimen/margin_extra_large"
            android:layout_marginTop="@dimen/margin_extra_large"
            android:layout_marginEnd="@dimen/margin_extra_large"
            android:clickable="true"
            android:drawableTint="@color/white"
            android:gravity="center"
            android:paddingEnd="25dp"
             android:background="@drawable/curved_backbround"
            android:text="@string/disable_battery_optimisation"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/oem_battery_settings"
            style="@style/TextAppearance.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_extra_large"
            android:layout_marginStart="@dimen/margin_extra_large"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_extra_large"
            android:clickable="true"
            android:drawableTint="@color/white"
            android:background="@drawable/curved_backbround"
            android:gravity="center"
            android:paddingEnd="25dp"
            android:text="@string/oem_battery_settings"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/extra_optimisation"
            style="@style/TextAppearance.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_extra_large"
            android:layout_marginStart="@dimen/margin_extra_large"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_extra_large"
            android:clickable="true"
            android:drawableTint="@color/white"
            android:background="@drawable/curved_backbround"
            android:gravity="center"
            android:paddingEnd="25dp"
            android:text="@string/extra_optimisation_tips"
            android:textAllCaps="false"
            android:textColor="@color/white" />



    </androidx.appcompat.widget.LinearLayoutCompat>


    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:drawablePadding="@dimen/margin_mid_large"
            android:padding="25dp"
            android:text="@string/action_next"
             />

    </FrameLayout>

</FrameLayout>